--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /.idea/libraries
 .DS_Store
 /build
+app/src/debug/res/values/google_maps_api.xml
+app/src/debug/res/values/google_maps_api.xml
+app/src/debug/res/values/google_maps_api.xml
